logs/enstaller.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/egginst'...
Listing './lib/python3.5/site-packages/egginst/console'...
Listing './lib/python3.5/site-packages/egginst/tests'...
Listing './lib/python3.5/site-packages/egginst/tests/data'...
Listing './lib/python3.5/site-packages/egginst/tests/data/macho'...
Listing './lib/python3.5/site-packages/egginst/vendor'...
Listing './lib/python3.5/site-packages/egginst/vendor/attr'...
Listing './lib/python3.5/site-packages/egginst/vendor/jsonschema'...
Listing './lib/python3.5/site-packages/egginst/vendor/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/egginst/vendor/okonomiyaki'...
Listing './lib/python3.5/site-packages/egginst/vendor/okonomiyaki/bundled'...
Listing './lib/python3.5/site-packages/egginst/vendor/okonomiyaki/bundled/traitlets'...
Listing './lib/python3.5/site-packages/egginst/vendor/okonomiyaki/file_formats'...
Listing './lib/python3.5/site-packages/egginst/vendor/okonomiyaki/file_formats/_blacklist'...
Listing './lib/python3.5/site-packages/egginst/vendor/okonomiyaki/platforms'...
Listing './lib/python3.5/site-packages/egginst/vendor/okonomiyaki/repositories'...
Listing './lib/python3.5/site-packages/egginst/vendor/okonomiyaki/runtimes'...
Listing './lib/python3.5/site-packages/egginst/vendor/okonomiyaki/utils'...
Listing './lib/python3.5/site-packages/egginst/vendor/okonomiyaki/versions'...
Listing './lib/python3.5/site-packages/egginst/vendor/zipfile2'...
Listing './lib/python3.5/site-packages/enstaller'...
Listing './lib/python3.5/site-packages/enstaller/auth'...
Listing './lib/python3.5/site-packages/enstaller/auth/tests'...
Listing './lib/python3.5/site-packages/enstaller/cli'...
Listing './lib/python3.5/site-packages/enstaller/cli/tests'...
Listing './lib/python3.5/site-packages/enstaller/indexed_repo'...
Listing './lib/python3.5/site-packages/enstaller/indexed_repo/tests'...
Listing './lib/python3.5/site-packages/enstaller/indexed_repo/tests/epd'...
Listing './lib/python3.5/site-packages/enstaller/indexed_repo/tests/gpl'...
Listing './lib/python3.5/site-packages/enstaller/indexed_repo/tests/open'...
Listing './lib/python3.5/site-packages/enstaller/indexed_repo/tests/runner'...
Listing './lib/python3.5/site-packages/enstaller/solver'...
Listing './lib/python3.5/site-packages/enstaller/solver/tests'...
Listing './lib/python3.5/site-packages/enstaller/tests'...
Listing './lib/python3.5/site-packages/enstaller/tools'...
Listing './lib/python3.5/site-packages/enstaller/tools/tests'...
Listing './lib/python3.5/site-packages/enstaller/vendor'...
Listing './lib/python3.5/site-packages/enstaller/vendor/cachecontrol'...
Listing './lib/python3.5/site-packages/enstaller/vendor/cachecontrol/caches'...
Listing './lib/python3.5/site-packages/enstaller/vendor/futures'...
Listing './lib/python3.5/site-packages/enstaller/vendor/keyring'...
Listing './lib/python3.5/site-packages/enstaller/vendor/keyring/backends'...
Listing './lib/python3.5/site-packages/enstaller/vendor/keyring/util'...
Listing './lib/python3.5/site-packages/enstaller/vendor/requests'...
Listing './lib/python3.5/site-packages/enstaller/vendor/requests/packages'...
Listing './lib/python3.5/site-packages/enstaller/vendor/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/enstaller/vendor/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/enstaller/vendor/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/enstaller/vendor/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/enstaller/vendor/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/enstaller/vendor/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/enstaller/vendor/sqlite_cache'...
Listing './lib/python3.5/site-packages/enstaller/vendor/win32ctypes'...
Listing './lib/python3.5/site-packages/enstaller/vendor/yaml'...
Compiling './lib/python3.5/site-packages/enstaller/vendor/yaml/constructor.py'...
***   File "./lib/python3.5/site-packages/enstaller/vendor/yaml/constructor.py", line 130
    except TypeError, exc:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/enstaller/vendor/yaml/reader.py'...
***   File "./lib/python3.5/site-packages/enstaller/vendor/yaml/reader.py", line 158
    except UnicodeDecodeError, exc:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/enstaller/vendor/yaml/resolver.py'...
***   File "./lib/python3.5/site-packages/enstaller/vendor/yaml/resolver.py", line 171
    re.compile(ur'''^(?:yes|Yes|YES|no|No|NO
                    |true|True|TRUE|false|False|FALSE
                    |on|On|ON|off|Off|OFF)$''', re.X),
                                            
                                                     
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/enstaller/vendor/yaml/scanner.py'...
***   File "./lib/python3.5/site-packages/enstaller/vendor/yaml/scanner.py", line 1427
    except UnicodeDecodeError, exc:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enstaller/vendor/yaml_py3'...
Listing './lib/python3.5/site-packages/enstaller/versions'...
Listing './lib/python3.5/site-packages/enstaller/versions/tests'...
Listing './lib/python3.5/site-packages/enstaller-4.8.13.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
